Stop hiding skill questions behind a button

--- a/frontend/components/user/evaluations/evaluation.scss
+++ b/frontend/components/user/evaluations/evaluation.scss
@@ -23,13 +23,6 @@
   font-size: 14px;
 }
 
-.skill-body___info-block {
-  border: none;
-  box-shadow: none;
-  color: lightslategray;
-  margin-top: 10px;
-}
-
 .skill__next-skill {
   padding-top: 10px;
   padding-bottom: 10px;
